added the svg icons

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -13,13 +13,13 @@
         <div class="card-left">
           <div class="cont-details">
             <div class="icon">
-              <img src="assets/images/mobile_icon.svg" />
+              <img src="http://www.labs.stackroute.io/images/mobile_icon.svg" />
             </div>
             <a href="tel:+91 8041-275-059" class="text">+91 8041-275-059</a>
           </div>
           <div class="cont-details">
             <div class="icon">
-              <img src="assets/images/Email_icon.svg" />
+              <img src="http://www.labs.stackroute.io/images/Email_icon.svg" />
             </div>
             <a href="mailto:contact@stackroute.in" class="text"
               >contact@stackroute.in</a
@@ -27,7 +27,7 @@
           </div>
           <div class="cont-details">
             <div class="icon">
-              <img src="assets/images/location_icon.svg" />
+              <img src="http://www.labs.stackroute.io/images/location_icon.svg" />
             </div>
             <p class="text">
               1660, 3rd floor, 27th Main Rd, Parangi Palaya, Sector 2, HSR
@@ -39,7 +39,7 @@
         <div class="card-right">
           <ul class="tabs" id="contact-us-tabs">
             <li class="tab">
-              <a href="#ContactUs" class="active">Contact Us</a>
+              <a routerLink="/contact-us" class="active">Contact Us</a>
             </li>
             <!--<li class="tab"><a href="#JoinUs">Join Us</a></li>-->
           </ul>
