--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,18 +13,16 @@
           <div class="col s6">
             <div class="social-links right-align">
               <a href="#"
-                ><span
-                  ><img
-                    src="https://www.stackroute.in/themes/custom/stackroute_main/assets/images/linked_in.svg" /></span
+                ><span><img src="http://www.labs.stackroute.io/images/facebook-white.svg" /></span
               ></a>
               <a href="#"
-                ><span><img src="assets/images/twitter-white.svg" /></span
+                ><span><img src="http://www.labs.stackroute.io/images/twitter-white.svg" /></span
               ></a>
               <a href="#"
-                ><span><img src="assets/images/insta-white.svg" /></span
+                ><span><img src="http://www.labs.stackroute.io/images/insta-white.svg" /></span
               ></a>
               <a href="#"
-                ><span><img src="assets/images/youtube-white.svg" /></span
+                ><span><img src="http://www.labs.stackroute.io/images/youtube-white.svg" /></span
               ></a>
             </div>
             <div class="tNc right-align">
