--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="fixed-left">
   <div class="logo">
     <a href="#">
-      <img src="assets/images/New-Logo.png" class="responsive-img" />
+      <img src="http://www.labs.stackroute.io/images/New-Logo.png" class="responsive-img" />
     </a>
   </div>
   <a href="http://www.stackroute.in/" class="lab-link" target="_blank"
@@ -10,7 +10,7 @@
   <div class="menu">
     <a href="#" class="menu-icon sidenav-trigger" data-target="slide-out">
       <span class="icon-wrapper waves-effect waves-light"
-        ><img src="assets/images/menu_icon.svg" class="responsive-img"
+        ><img src="http://www.labs.stackroute.io/images/menu_icon.svg" class="responsive-img"
       /></span>
       <span class="text waves-effect waves-light">Menu</span>
     </a>
@@ -18,7 +18,7 @@
       <div class="left">
         <a class="menu-icon sidenav-close">
           <span class="icon-wrapper waves-effect waves-light"
-            ><img src="assets/images/close_button.svg" class="responsive-img"
+            ><img src="http://www.labs.stackroute.io/images/close_button.svg" class="responsive-img"
           /></span>
           <span class="text waves-effect waves-light">Menu</span>
         </a>
@@ -40,12 +40,12 @@
               >
             </li>
             <li>
-              <a class="sidenav-close scroll-smooth" href="contact-us.html"
+              <a class="sidenav-close scroll-smooth" routerLink="/contact-us"
                 >Join Us</a
               >
             </li>
             <li>
-              <a class="sidenav-close scroll-smooth" href="contact-us.html"
+              <a class="sidenav-close scroll-smooth" routerLink="/contact-us"
                 >Contact Us</a
               >
             </li>
@@ -64,16 +64,22 @@
           <a href="#"
             ><span
               ><img
-                src="https://www.stackroute.in/themes/custom/stackroute_main/assets/images/linked_in.svg" /></span
+                src="http://www.labs.stackroute.io/images/facebook-white.svg" /></span
           ></a>
           <a href="#"
-            ><span><img src="assets/images/twitter-white.svg" /></span
+            ><span
+              ><img
+                src="http://www.labs.stackroute.io/images/twitter-white.svg" /></span
           ></a>
           <a href="#"
-            ><span><img src="assets/images/insta-white.svg" /></span
+            ><span
+              ><img
+                src="http://www.labs.stackroute.io/images/insta-white.svg" /></span
           ></a>
           <a href="#"
-            ><span><img src="assets/images/youtube-white.svg" /></span
+            ><span
+              ><img
+                src="http://www.labs.stackroute.io/images/youtube-white.svg" /></span
           ></a>
         </div>
       </div>
@@ -85,7 +91,7 @@
       id="scrollbtn"
       class="waves-effect scroll-smooth waves-light"
     >
-      <img src="assets/images/scroll_element.svg" class="responsive-img" />
+      <img src="http://www.labs.stackroute.io/images/scroll_element.svg" class="responsive-img" />
       <span>Scroll</span>
     </a>
   </div>
@@ -94,14 +100,14 @@
 <header class="mobile">
   <div class="logo">
     <a href="#">
-      <img src="assets/images/New-Logo.png" class="responsive-img" />
+      <img src="http://www.labs.stackroute.io/images/New-Logo.png" class="responsive-img" />
     </a>
   </div>
   <a href="#" class="menu-icon sidenav-trigger" data-target="slide-out">
     <span class="icon-wrapper waves-effect waves-light"
-      ><img src="assets/images/menu_icon.svg" class="responsive-img"
+      ><img src="http://www.labs.stackroute.io/images/menu_icon.svg" class="responsive-img"
     /></span>
     <span class="text waves-effect waves-light">Menu</span>
   </a>
-  <a href="contact-us.html" class="contact-btn"> Contact Us </a>
+  <a routerLink="/contact-us" class="contact-btn"> Contact Us </a>
 </header>
