--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -243,10 +243,11 @@
               </h5>
               <div class="center-align">
                 <a
-                  href="contact-us.html"
+                  routerLink="/contact-us"
                   class="waves-effect btn-custom-light hoverable"
-                  >Join our team <i class="material-icons">arrow_forward</i></a
-                >
+                  >Join our team
+                  <i class="material-icons">arrow_forward</i>
+                </a>
               </div>
             </div>
           </div>
