removed tnc, social media icons,copyright year,tel-no

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -51,12 +51,12 @@
             </li>
           </ul>
           <ul class="link-bottom">
-            <li><a href="#">Terms of Use</a></li>
-            <li><a href="#">Privacy Statement</a></li>
+            <!-- <li><a href="#">Terms of Use</a></li> -->
+            <li><a href="https://privacy.niit.com/prospective_customer.html" target="_blank">Privacy Statement</a></li>
           </ul>
         </div>
       </div>
-      <div class="right">
+      <!-- <div class="right">
         <p class="follow-us">
           Follow Us<span class="line-wrap"><span class="line"></span></span>
         </p>
@@ -82,7 +82,7 @@
                 src="http://www.labs.stackroute.io/images/youtube-white.svg" /></span
           ></a>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="scroll">
