--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -15,7 +15,7 @@
             <div class="icon">
               <img src="http://www.labs.stackroute.io/images/mobile_icon.svg" />
             </div>
-            <a href="tel:+91 8041-275-059" class="text">+91 8041-275-059</a>
+            <a href="tel:+91 9810798379" class="text">+91 9810798379 </a>
           </div>
           <div class="cont-details">
             <div class="icon">
@@ -27,7 +27,9 @@
           </div>
           <div class="cont-details">
             <div class="icon">
-              <img src="http://www.labs.stackroute.io/images/location_icon.svg" />
+              <img
+                src="http://www.labs.stackroute.io/images/location_icon.svg"
+              />
             </div>
             <p class="text">
               1660, 3rd floor, 27th Main Rd, Parangi Palaya, Sector 2, HSR
