--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,11 +7,11 @@
             <div class="contact-info">
               <p>Start a conversation</p>
               <a href="mailto:contact@stackroute.in">contact@stackroute.in</a>
-              <a href="tel:+91 80 41275059">+91 80 41275059</a>
+              <a href="tel:+91 9810798379">+91 9810798379</a>
             </div>
           </div>
           <div class="col s6">
-            <div class="social-links right-align">
+            <!-- <div class="social-links right-align">
               <a href="#"
                 ><span><img src="http://www.labs.stackroute.io/images/facebook-white.svg" /></span
               ></a>
@@ -24,10 +24,10 @@
               <a href="#"
                 ><span><img src="http://www.labs.stackroute.io/images/youtube-white.svg" /></span
               ></a>
-            </div>
+            </div> -->
             <div class="tNc right-align">
-              <a href="#">Terms of Use</a>
-              <span>|</span>
+              <!-- <a href="#">Terms of Use</a>
+              <span>|</span> -->
               <a
                 href="https://privacy.niit.com/prospective_customer.html"
                 target="_blank"
@@ -39,7 +39,7 @@
         <div class="row footer-bootom">
           <div class="col s12">
             <p class="copyright">
-              Copyright © 2019 StackRoute. All rights reserved
+              Copyright © 2021 StackRoute. All rights reserved
             </p>
           </div>
         </div>
