Resolved tabs issue

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,35 +28,15 @@
 
   <section class="section visionNmission" id="VisionMission">
     <div class="container">
-      <ul class="tabs" id="visionTab">
-        <li class="tab"><a href="#OurVision" class="active">Our Vision</a></li>
-        <li class="tab"><a href="#OurMission">Our Mission</a></li>
-      </ul>
-      <div class="tab-sec" id="OurVision">
-        <div class="tab-cont">
-          <p>
-            Transforming education in India by giving an opportunity to every
-            young mind to be successful.
-          </p>
-          <a class="icon" id="next-btn"
-            ><i class="material-icons">arrow_forward</i></a
-          >
-        </div>
+        <mat-tab-group>
+          <mat-tab label="Our Vision" class="tabs"> <p>Transforming education in India by giving an opportunity to every young mind to be successful.</p>
+          </mat-tab>
+          <mat-tab label="Our Mission" class="tabs"> <p>Creating innovative learning platforms with our team of technology specialists.</p>
+          </mat-tab>
+        </mat-tab-group>
       </div>
-      <div class="tab-sec" id="OurMission">
-        <div class="tab-cont">
-          <p>
-            Creating innovative learning platforms with our team of technology
-            specialists.
-          </p>
-          <a class="icon" id="prev-btn"
-            ><i class="material-icons">arrow_backward</i></a
-          >
-        </div>
-      </div>
-    </div>
+    
   </section>
-
   <section class="section our-work" id="OurWork">
     <div class="container">
       <div class="sec-head">
