sending email and thank you pages are done

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -120,7 +120,7 @@
                   <button
                     class="btn-custom-light waves-effect"
                     id="contact-form"
-                    type="submit"
+                    type="submit" (click)="sendMail()"
                   >
                     Send <i class="material-icons">arrow_forward</i>
                     <div class="spinner">
