material tabs for ourwork section block

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,267 +1,3 @@
-@media (max-width: 1200px) {
-  .sticky-CTA {
-    right: 30px;
-  }
-  .sticky-bg {
-    right: 30px;
-  }
-  .contact-cards .card-left {
-    padding: 35px 30px;
-    max-width: 300px;
-  }
-  .contact-cards .card-right {
-    padding: 25px 40px 25px 240px;
-  }
-}
-
-@media (max-width: 992px) {
-  .sticky-CTA,
-  .sticky-bg {
-    width: 64px;
-    height: 64px;
-    top: 20px;
-    right: 20px;
-  }
-  .sticky-CTA a {
-    font-size: 12px;
-    line-height: 14px;
-  }
-  header.fixed-left {
-    width: 60px;
-  }
-  main {
-    padding-left: 60px;
-  }
-  footer {
-    padding: 50px 0 1px 60px;
-  }
-  .contact-cards .card-left {
-    max-width: 260px;
-    padding: 35px 25px;
-  }
-  .contact-cards .card-right {
-    padding: 25px 30px 25px 190px;
-  }
-  .circle-border .circle:after {
-    width: 64px;
-    height: 64px;
-  }
-  .fullscreen-menu.sidenav .left {
-    padding-left: 75px;
-  }
-  .fullscreen-menu.sidenav .menu-list ul li a {
-    font-size: 18px;
-    line-height: 36px;
-  }
-  .fullscreen-menu.sidenav .menu-list ul.link-bottom {
-    margin-top: 40px;
-  }
-  .fullscreen-menu.sidenav .menu-list ul.link-bottom {
-    text-align: left;
-  }
-  .fullscreen-menu.sidenav .right {
-    width: 70px;
-  }
-  .fullscreen-menu.sidenav .right .follow-us {
-    padding: 0px 10px;
-  }
-}
-@media (max-width: 767px) {
-  .contact-cards .card-left {
-    max-width: none;
-    width: 80%;
-    padding: 25px 25px;
-    top: 0;
-    left: 10%;
-  }
-  .contact-cards {
-    padding-left: 0;
-    padding-top: 100px;
-  }
-  .contact-cards .card-right {
-    padding: 165px 30px 25px 30px;
-  }
-  .contact-cards .cont-details {
-    margin-bottom: 15px;
-  }
-  .contact-cards .cont-details .text {
-    font-size: 14px;
-    padding-left: 10px;
-  }
-  .fixed-left {
-    left: -100px !important;
-  }
-  main {
-    padding-left: 0;
-  }
-  .banner-cont h1 {
-    font-size: 28px;
-    line-height: 30px;
-  }
-  .banner-cont h1 > span:first-child {
-    width: 165px;
-  }
-  .banner-cont p {
-    font-size: 15px;
-    line-height: 22px;
-  }
-  .banner {
-    max-height: 400px;
-    min-height: auto;
-    padding-bottom: 200px;
-    padding-top: 100px;
-  }
-  .banner-cont + img {
-    position: absolute;
-    bottom: -15px;
-    left: calc(50% - 170px);
-    width: 340px;
-  }
-  .banner-cont {
-    padding-bottom: 0px;
-  }
-  .sticky-CTA,
-  .sticky-bg {
-    display: none;
-  }
-  .visionNmission .tabs li a {
-    font-size: 18px;
-  }
-  .visionNmission .tab-cont p {
-    font-size: 14px;
-    line-height: 22px;
-    padding: 0px 50px;
-  }
-  .visionNmission .tab-sec .tab-cont .icon {
-    right: 10px;
-  }
-  .visionNmission .tab-cont .icon i {
-    opacity: 0.3;
-    font-size: 26px;
-  }
-  .visionNmission .tabs {
-    max-width: 250px;
-  }
-  .visionNmission .tab-sec:last-child .tab-cont .icon {
-    left: 10px;
-  }
-  .sec-head h4 {
-    font-size: 26px;
-  }
-  .sec-head p {
-    font-size: 15px;
-    line-height: 24px;
-  }
-  .our-work .tabs li a,
-  .our-work .tabs li a:hover {
-    font-size: 22px;
-    margin: 0 10px;
-  }
-  .our-work .tab-sec p {
-    font-size: 13px;
-    line-height: 22px;
-  }
-  .btn-custom1,
-  .btn-custom-light {
-    font-size: 16px;
-    padding: 10px 30px;
-  }
-  .work-with-us .work-with-us-cont h4 {
-    font-size: 20px;
-    line-height: 24px;
-  }
-  .work-with-us p {
-    font-size: 13px;
-    line-height: 22px;
-  }
-  .work-with-us ul li {
-    font-size: 13px;
-    line-height: 22px;
-  }
-  .join-team-card h5 {
-    font-size: 15px;
-    line-height: 24px;
-  }
-  .join-team-card {
-    padding: 30px 8% 35px;
-    margin-top: 50px;
-  }
-  .join-team-card h5 {
-    font-size: 15px;
-    line-height: 24px;
-  }
-  footer {
-    padding: 30px 0 1px 0px;
-  }
-  footer .m11 > .row {
-    display: block;
-    text-align: center;
-  }
-  footer .social-links {
-    text-align: center;
-    justify-content: center;
-    margin-top: 30px;
-  }
-  footer .right-align {
-    text-align: center;
-  }
-  footer .row .col.s6 {
-    width: 100%;
-  }
-  footer .contact-info p {
-    font-size: 13px;
-  }
-  footer .contact-info a {
-    font-size: 15px;
-  }
-  footer .tNc a,
-  footer .tNc span {
-    font-size: 13px;
-  }
-  footer p.copyright {
-    font-size: 12px;
-  }
-  header.mobile {
-    display: flex;
-  }
-  header.mobile .menu-icon {
-    display: none;
-  }
-  .contact-us-form .row .col.s6 {
-    width: 100%;
-  }
-  .contact-us-form .input-field.col label {
-    font-size: 11px;
-    color: #4a4a4a;
-    left: 26px;
-    transform: translateY(9px);
-  }
-  .contact-us-form .right-align.col {
-    text-align: center !important;
-  }
-  .fullscreen-menu.sidenav {
-    width: 100%;
-  }
-}
-@media (max-width: 360px) {
-  .banner-cont h1 > span:first-child {
-    width: 144px;
-  }
-  .banner-cont h1 {
-    font-size: 24px;
-    line-height: 30px;
-  }
-  .contact-cards .cont-details .icon {
-    width: 18px;
-  }
-  .contact-cards .cont-details .icon img {
-    width: 100%;
-  }
-  .contact-cards .card-left {
-    padding: 15px;
-  }
-  .contact-cards .cont-details .text {
-    font-size: 12px;
-    line-height: 18px;
-  }
+.workTab {
+  color: white !important;
 }
