--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,14 +28,21 @@
 
   <section class="section visionNmission" id="VisionMission">
     <div class="container">
-        <mat-tab-group>
-          <mat-tab label="Our Vision" class="tabs"> <p>Transforming education in India by giving an opportunity to every young mind to be successful.</p>
-          </mat-tab>
-          <mat-tab label="Our Mission" class="tabs"> <p>Creating innovative learning platforms with our team of technology specialists.</p>
-          </mat-tab>
-        </mat-tab-group>
-      </div>
-    
+      <mat-tab-group>
+        <mat-tab label="Our Vision" class="tabs">
+          <p>
+            Transforming education in India by giving an opportunity to every
+            young mind to be successful.
+          </p>
+        </mat-tab>
+        <mat-tab label="Our Mission" class="tabs">
+          <p>
+            Creating innovative learning platforms with our team of technology
+            specialists.
+          </p>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
   </section>
   <section class="section our-work" id="OurWork">
     <div class="container">
@@ -46,13 +53,69 @@
           to 200 million children.
         </p>
       </div>
+      <mat-tab-group class="workTab">
+        <mat-tab label="EkStep" class="tabs">
+          <div class="tab-cont">
+            <p>
+              Ekstep, a not-for-profit, was co-founded by Nandan Nilekani,
+              Rohini Nilekani, and Shankar Maruwada with the aim to address gaps
+              in the education system at the grassroots level in India.
+            </p>
+            <p>
+              StackRoute Labs is a proud partner in co-creating the layered
+              modular platform for Ekstep. The platform aims to create equitable
+              access to learning opportunities by delivering personalized
+              learning to 200 million children across India.
+            </p>
 
-      <ul class="tabs" id="ourWorkTab">
+            <div class="center-align">
+              <a
+                href="https://ekstep.org/"
+                target="_blank"
+                class="waves-effect waves-light btn-custom1 hoverable"
+                >Take a look <i class="material-icons">arrow_forward</i></a
+              >
+            </div>
+          </div>
+        </mat-tab>
+        <mat-tab label="Sunbird" class="tabs">
+          <div class="tab-cont">
+            <p>
+              <b>Code for one. Code for all.</b> <br />
+              Contributed by EkStep, Sunbird is the largest fully open source
+              platform in India designed to empower the education and learning
+              ecosystem to innovate and imagine solutions for lifelong learning.
+            </p>
+            <p>
+              Aimed at making a major societal impact, the Sunbird is a
+              repository of learning management micro-services that are:
+            </p>
+            <ul class="browser-default">
+              <li>Architected to Scale</li>
+              <li>
+                Designed to support diverse teaching and learning solutions
+              </li>
+              <li>Developed as an open source model to enable innovation.</li>
+            </ul>
+
+            <div class="center-align">
+              <a
+                href="http://www.sunbird.org/"
+                target="_blank"
+                class="waves-effect waves-light btn-custom1 hoverable"
+                >Take a look <i class="material-icons">arrow_forward</i></a
+              >
+            </div>
+          </div>
+        </mat-tab>
+      </mat-tab-group>
+      <!-- <ul class="tabs" id="ourWorkTab">
         <li class="tab"><a href="#EkStep" class="active">EkStep</a></li>
         <li class="tab"><a href="#Sunbird">Sunbird</a></li>
-        <!-- <li class="tab"><a href="#Diksha">Diksha</a></li> -->
-      </ul>
-      <div class="tab-sec" id="EkStep">
+      <li class="tab"><a href="#Diksha">Diksha</a></li> 
+      </ul> -->
+
+      <!-- <div class="tab-sec" id="EkStep">
         <div class="tab-cont">
           <p>
             Ekstep, a not-for-profit, was co-founded by Nandan Nilekani, Rohini
@@ -75,8 +138,8 @@
             >
           </div>
         </div>
-      </div>
-      <div class="tab-sec" id="Sunbird">
+      </div> -->
+      <!-- <div class="tab-sec" id="Sunbird">
         <div class="tab-cont">
           <p>
             <b>Code for one. Code for all.</b> <br />
@@ -103,7 +166,7 @@
             >
           </div>
         </div>
-      </div>
+      </div> -->
       <!--<div class="tab-sec" id="Diksha">
                 <div class="tab-cont">
                     <p><b>The National Platform for teachers, our heroes</b> <br> Adopted by MHRD, Diksha is a content creation platform for teachers, offering tools for creating and uploading content. It acts as a repository of contextualized and relevant courses for teachers and students which is presented in an interactive and engaging format.</p>
