--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,7 +53,7 @@
           to 200 million children.
         </p>
       </div>
-      <mat-tab-group class="workTab">
+      <mat-tab-group class="workTabs">
         <mat-tab label="EkStep" class="tabs">
           <div class="tab-cont">
             <p>
