added production build command and google map link

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -34,7 +34,7 @@
             <p class="text">
               1660, 3rd floor, 27th Main Rd, Parangi Palaya, Sector 2, HSR
               Layout, Bengaluru, Karnataka 560102
-              <a href="#">Get Directions →</a>
+              <a href="https://goo.gl/maps/ykY6Ef27dGrJ78AH8" target="_blank">Get Directions →</a>
             </p>
           </div>
         </div>
