updated the svg icons path, added crossdomain to send mail api

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -13,13 +13,13 @@
         <div class="card-left">
           <div class="cont-details">
             <div class="icon">
-              <img src="http://www.labs.stackroute.io/images/mobile_icon.svg" />
+              <img src="assets/images/mobile_icon.svg" />
             </div>
             <a href="tel:+91 9810798379" class="text">+91 9810798379 </a>
           </div>
           <div class="cont-details">
             <div class="icon">
-              <img src="http://www.labs.stackroute.io/images/Email_icon.svg" />
+              <img src="assets/images/Email_icon.svg" />
             </div>
             <a href="mailto:contact@stackroute.in" class="text"
               >contact@stackroute.in</a
@@ -28,7 +28,7 @@
           <div class="cont-details">
             <div class="icon">
               <img
-                src="http://www.labs.stackroute.io/images/location_icon.svg"
+                src="assets/images/location_icon.svg"
               />
             </div>
             <p class="text">
