--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="fixed-left">
   <div class="logo">
     <a href="#">
-      <img src="http://www.labs.stackroute.io/images/New-Logo.png" class="responsive-img" />
+      <img src="assets/images/New-Logo.png" class="responsive-img" />
     </a>
   </div>
   <a href="http://www.stackroute.in/" class="lab-link" target="_blank"
@@ -10,7 +10,7 @@
   <div class="menu">
     <a href="#" class="menu-icon sidenav-trigger" data-target="slide-out">
       <span class="icon-wrapper waves-effect waves-light"
-        ><img src="http://www.labs.stackroute.io/images/menu_icon.svg" class="responsive-img"
+        ><img src="assets/images/menu_icon.svg" class="responsive-img"
       /></span>
       <span class="text waves-effect waves-light">Menu</span>
     </a>
@@ -18,7 +18,9 @@
       <div class="left">
         <a class="menu-icon sidenav-close">
           <span class="icon-wrapper waves-effect waves-light"
-            ><img src="http://www.labs.stackroute.io/images/close_button.svg" class="responsive-img"
+            ><img
+              src="assets/images/close_button.svg"
+              class="responsive-img"
           /></span>
           <span class="text waves-effect waves-light">Menu</span>
         </a>
@@ -91,7 +93,10 @@
       id="scrollbtn"
       class="waves-effect scroll-smooth waves-light"
     >
-      <img src="http://www.labs.stackroute.io/images/scroll_element.svg" class="responsive-img" />
+      <img
+        src="assets/images/scroll_element.svg"
+        class="responsive-img"
+      />
       <span>Scroll</span>
     </a>
   </div>
@@ -100,12 +105,15 @@
 <header class="mobile">
   <div class="logo">
     <a href="#">
-      <img src="http://www.labs.stackroute.io/images/New-Logo.png" class="responsive-img" />
+      <img
+        src="assets/images/New-Logo.png"
+        class="responsive-img"
+      />
     </a>
   </div>
   <a href="#" class="menu-icon sidenav-trigger" data-target="slide-out">
     <span class="icon-wrapper waves-effect waves-light"
-      ><img src="http://www.labs.stackroute.io/images/menu_icon.svg" class="responsive-img"
+      ><img src="assets/images/menu_icon.svg" class="responsive-img"
     /></span>
     <span class="text waves-effect waves-light">Menu</span>
   </a>
