--- a/src/app/thankyou/thankyou.component.html
+++ b/src/app/thankyou/thankyou.component.html
@@ -1,7 +1,7 @@
 <section class="section contact-us thankyou-sec bg-dark">
     <div class="container">
         <div class="thank-you sec-head">
-            <span class="icon"><img src="http://www.labs.stackroute.io/images/thank_you__icon.svg"/></span>
+            <span class="icon"><img src="assets/images/thank_you__icon.svg"/></span>
             <h3>Submission Received!</h3>
             <p>Thank you for the enquiry. Unless there’s a ‘force majeure’, you can expect our reply within 1 business day.</p>
             <div class="redircting_msgs">
