added email svg icon, changed the href for stackroute home link

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,7 @@
       <img src="assets/images/New-Logo.png" class="responsive-img" />
     </a>
   </div>
-  <a href="http://www.stackroute.in/" class="lab-link" target="_blank"
-    >StackRoute Home</a
-  >
+  <a href="#" class="lab-link">StackRoute Home</a>
   <div class="menu">
     <a href="#" class="menu-icon sidenav-trigger" data-target="slide-out">
       <span class="icon-wrapper waves-effect waves-light"
@@ -18,9 +16,7 @@
       <div class="left">
         <a class="menu-icon sidenav-close">
           <span class="icon-wrapper waves-effect waves-light"
-            ><img
-              src="assets/images/close_button.svg"
-              class="responsive-img"
+            ><img src="assets/images/close_button.svg" class="responsive-img"
           /></span>
           <span class="text waves-effect waves-light">Menu</span>
         </a>
@@ -54,7 +50,13 @@
           </ul>
           <ul class="link-bottom">
             <!-- <li><a href="#">Terms of Use</a></li> -->
-            <li><a href="https://privacy.niit.com/prospective_customer.html" target="_blank">Privacy Statement</a></li>
+            <li>
+              <a
+                href="https://privacy.niit.com/prospective_customer.html"
+                target="_blank"
+                >Privacy Statement</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -93,10 +95,7 @@
       id="scrollbtn"
       class="waves-effect scroll-smooth waves-light"
     >
-      <img
-        src="assets/images/scroll_element.svg"
-        class="responsive-img"
-      />
+      <img src="assets/images/scroll_element.svg" class="responsive-img" />
       <span>Scroll</span>
     </a>
   </div>
@@ -105,10 +104,7 @@
 <header class="mobile">
   <div class="logo">
     <a href="#">
-      <img
-        src="assets/images/New-Logo.png"
-        class="responsive-img"
-      />
+      <img src="assets/images/New-Logo.png" class="responsive-img" />
     </a>
   </div>
   <a href="#" class="menu-icon sidenav-trigger" data-target="slide-out">
