--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,13 +30,13 @@
     <div class="container">
       <mat-tab-group>
         <mat-tab label="Our Vision" class="tabs">
-          <p>
+          <p class="style-text-VNDMission">
             Transforming education in India by giving an opportunity to every
             young mind to be successful.
           </p>
         </mat-tab>
         <mat-tab label="Our Mission" class="tabs">
-          <p>
+          <p class="style-text-VNDMission">
             Creating innovative learning platforms with our team of technology
             specialists.
           </p>
@@ -55,7 +55,7 @@
       </div>
       <mat-tab-group class="workTabs">
         <mat-tab label="EkStep" class="tabs">
-          <div class="tab-cont">
+          <div class="tab-cont tab-sec style-text-worktab">
             <p>
               Ekstep, a not-for-profit, was co-founded by Nandan Nilekani,
               Rohini Nilekani, and Shankar Maruwada with the aim to address gaps
@@ -79,7 +79,7 @@
           </div>
         </mat-tab>
         <mat-tab label="Sunbird" class="tabs">
-          <div class="tab-cont">
+          <div class="tab-cont tab-sec style-text-worktab">
             <p>
               <b>Code for one. Code for all.</b> <br />
               Contributed by EkStep, Sunbird is the largest fully open source
